<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.ProfileActivity"
        android:id="@+id/view_profile_layout">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/profile_scroll">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp"
                >

            <TextView
                    android:text="@string/profile_header_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView2"/>

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:ems="10"
                    android:id="@+id/profile_name_field"
                    android:padding="10dp"
                    android:minHeight="48dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/rounded_text_edit"
                    android:backgroundTint="@color/gray_200"
                    android:enabled="false"
                    android:textCursorDrawable="@null"/>

            <TextView
                    android:text="@string/profile_header_nik"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView3"/>

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:ems="10"
                    android:id="@+id/profile_nik_field"
                    android:background="@drawable/rounded_text_edit"
                    android:backgroundTint="@color/gray_200"
                    android:layout_marginBottom="10dp"
                    android:minHeight="48dp"
                    android:padding="10dp"
                    android:enabled="false"/>

            <TextView
                    android:text="@string/profile_header_gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView4"/>

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:ems="10"
                    android:id="@+id/profile_gender_field"
                    android:padding="10dp"
                    android:minHeight="48dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/rounded_text_edit"
                    android:backgroundTint="@color/gray_200"
                    android:enabled="false"/>

            <TextView
                    android:text="@string/profile_header_blood_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:ems="10"
                    android:id="@+id/profile_blood_type_field"
                    android:background="@drawable/rounded_text_edit"
                    android:backgroundTint="@color/gray_200"
                    android:layout_marginBottom="10dp"
                    android:minHeight="48dp"
                    android:padding="10dp"
                    android:enabled="false"/>

            <View
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider"
                    />

            <TextView
                    android:text="@string/profile_header_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView"/>

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/profile_address_field"
                    android:background="@drawable/rounded_text_edit"
                    android:backgroundTint="@color/gray_200"
                    android:layout_marginBottom="10dp"
                    android:minHeight="48dp"
                    android:padding="10dp"
                    android:textCursorDrawable="@drawable/black_cursor"/>

            <TextView
                    android:text="@string/profile_header_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView5"/>

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:ems="10"
                    android:id="@+id/profile_email_field"
                    android:padding="10dp"
                    android:minHeight="48dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/rounded_text_edit"
                    android:backgroundTint="@color/gray_200"
                    android:textCursorDrawable="@drawable/black_cursor"/>

            <TextView
                    android:text="@string/profile_header_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView6"/>

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:ems="10"
                    android:id="@+id/profile_phone_field"
                    android:background="@drawable/rounded_text_edit"
                    android:backgroundTint="@color/gray_200"
                    android:layout_marginBottom="10dp"
                    android:minHeight="48dp"
                    android:padding="10dp"
                    android:textCursorDrawable="@drawable/black_cursor"/>

            <TextView
                    android:text="@string/profile_header_emergency_contact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView7"/>

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:ems="10"
                    android:id="@+id/profile_emergency_contact_field"
                    android:padding="10dp"
                    android:minHeight="48dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/rounded_text_edit"
                    android:backgroundTint="@color/gray_200"
                    android:textCursorDrawable="@drawable/black_cursor"/>

            <View
                    android:id="@+id/divider2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider"
                    />

            <TextView
                    android:text="@string/profile_header_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView8"/>

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/profile_password_field"
                    android:background="@drawable/rounded_text_edit"
                    android:backgroundTint="@color/gray_200"
                    android:layout_marginBottom="10dp"
                    android:minHeight="48dp"
                    android:padding="10dp"
                    android:textCursorDrawable="@drawable/black_cursor"/>

            <TextView
                    android:text="@string/profile_header_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView9"/>

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/profile_confirm_password_field"
                    android:padding="10dp"
                    android:minHeight="48dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/rounded_text_edit"
                    android:backgroundTint="@color/gray_200"
                    android:textCursorDrawable="@drawable/black_cursor"/>

            <View
                    android:id="@+id/divider3"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider"
                    />

            <TextView
                    android:text="@string/profile_header_current_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView11"/>

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/profile_current_password_field"
                    android:hint="@string/prompt_password"
                    android:background="@drawable/rounded_text_edit"
                    android:backgroundTint="@color/gray_200"
                    android:layout_marginBottom="10dp"
                    android:minHeight="48dp"
                    android:padding="10dp"
                    android:textCursorDrawable="@drawable/black_cursor"/>

            <Button
                    android:text="@string/profile_header_update"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/update_profile_btn"
                    android:insetBottom="0dp"
                    android:insetTop="0dp"/>
        </LinearLayout>
    </ScrollView>
</androidx.appcompat.widget.LinearLayoutCompat>