<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".activity.LoginActivity"
        >

    <include
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            layout="@layout/fragment_logo"
            android:layout_weight="2"/>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/field_frame"
            android:layout_weight="3"
            android:gravity="center_vertical"
            android:background="@color/red_500"
            android:padding="20dp">

        <TextView
                android:text="@string/action_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/login_text_view"
                android:textSize="24sp"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:layout_marginBottom="20dp"
                />

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical">

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:ems="10"
                    android:id="@+id/emailFieldLogin"
                    android:hint="@string/prompt_email"
                    android:maxHeight="48dp"
                    android:minHeight="48dp"
                    android:ellipsize="none"
                    android:background="@drawable/rounded_text_edit"
                    android:backgroundTint="@color/white"
                    android:padding="10dp"
                    android:layout_marginBottom="10dp"/>

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/passwordFieldLogin"
                    android:hint="@string/prompt_password"
                    android:minHeight="48dp"
                    android:padding="10dp"
                    android:background="@drawable/rounded_text_edit"
                    android:backgroundTint="@color/white"
                    android:layout_marginBottom="10dp"/>

            <Button
                    android:text="@string/action_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/login_btn"
                    android:backgroundTint="@color/blue_600"
                    android:insetBottom="0dp"
                    android:insetTop="0dp"
                    android:layout_marginBottom="10dp"/>

            <Button
                    android:text="@string/action_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/register_btn"
                    android:backgroundTint="@color/blue_600"
                    android:insetBottom="0dp"
                    android:insetTop="0dp"/>

        </LinearLayout>

    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>